[package]
name = "price-src-tcp-shared"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-tcp-sockets = { branch = "0.1.2", git = "https://github.com/MyJetTools/my-tcp-sockets.git" }
rust-extensions = { branch = "main", git = "https://github.com/MyJetTools/rust-extensions.git" }
async-trait = "*"
chrono = "*"
